# dyasc-baliza-build

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
data/: index.html
fake-server/: db.json
src/: CMakeLists.txt  ComunicadorDeEventos.hpp  ConectorCI.cpp  ConectorCI.hpp  ConectorWiFi.cpp  ConectorWiFi.hpp  ControladorDeAlertas.cpp  ControladorDeAlertas.hpp  Estado.cpp  Estado.hpp  GestorDeConexion.hpp  GestorDeCredenciales.cpp  GestorDeCredenciales.hpp  Orquestador.cpp  Orquestador.hpp  Servidor.hpp  ServidorLocal.cpp  ServidorLocal.hpp  VisualizadorDeEstado.hpp  main.cpp
src/configuracion/: local.h  red.h
test/: BalizaTest.cpp  CMakeLists.txt  MockConectorCI.cpp  MockConectorWiFi.cpp  MockControladorDeAlertas.cpp  MockGestorDeCredenciales.cpp  MockServidorLocal.cpp
